--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
    <body id="login">
     <div class="divcontainer">
       <main>
-        
+        <div  class="credentials">
+          <p></p>
+        </div>
         <div class="logincontentinput">
           <form class="formlog">
             <h1>Inicio de sesión</h1>
