--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     <div class="divcontainer">
       <main>
         <div  class="credentials">
-          <p></p>
+          <p>Email: gamestore@coderhouse.com
+            Contraseña: 123456</p>
         </div>
         <div class="logincontentinput">
           <form class="formlog">
