--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <main>
         <div  class="credentials">
           <p>Email: gamestore@coderhouse.com
-            Contraseña: 123456</p>
+            Password: 123456</p>
         </div>
         <div class="logincontentinput">
           <form class="formlog">
